[tool.poetry]
name = "nyc-taxi-trips"
version = "0.1.0"
description = "Environment package for NYC Taxi Trips"
authors = ["Almudena Hellin <almudena.hellin@clarity.ai>"]
license = "Public Domain"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
ipython = "^8.27.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
